@@ -461,6 +461,7 @@ Greg Kochanski
 Damon Kohler
 Marko Kohtala
 Joseph Koshy
+Jerzy Kozera
 Maksim Kozyarchuk
 Stefan Krah
 Bob Kras
